# lambda-proxy

./: Cargo.toml  README.md  package.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  dependabot.yml  main.yml  test.yml  update-lambda-runtime.yml  update_runtime.yml
src/: get_request.ts  get_requests.rs  index.ts  main.rs  test.json
tests/: index.test.ts
