[package]
name = "lambda-proxy"
version = "0.1.0"
authors = ["winstxnhdw"]
edition = "2021"

[build]
rustflags = ["-Z", "threads=2"]

[dependencies]
tokio = { version = "^1.48.0", features = ["macros"] }
reqwest = { version = "^0.11.27", default-features = false, features = ["json", "rustls-tls"] }
lambda_http = { version = "^1.0.2", default-features = false, features = ["apigw_http"] }
tracing-subscriber = { version = "^0.3.22", default-features = false, features = ["fmt"] }
tracing = { version = "^0.1", features = ["log"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.147"
futures = "^0.3.31"

